kubernetes/canary/nginx/ingress-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
  - host: canary-nginx.com
    http:
      paths:
      - path: /        
        backend:
          serviceName: web2
          servicePort: 8080
