kubernetes/canary/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - host: canary-nginx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
